@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Ensure XAUTHORITY gets passed if relevant to test execution
+phodevi: Add basic Budgie desktop reporting
 
 Phoronix Test Suite 7.4.0 Milestone 3
 28 August
